--- a/Mathematical/Base.lproj/Main.storyboard
+++ b/Mathematical/Base.lproj/Main.storyboard
@@ -169,6 +169,9 @@
                                         <state key="normal" title="=">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
+                                        <state key="highlighted">
+                                            <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
                                         <connections>
                                             <action selector="equalsKeyTappedWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="N8v-zn-zXH"/>
                                         </connections>
